scripts/dependencies/serverless/resources/broker-network-policy.yaml
# https://issues.redhat.com/browse/SRVKE-1216
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: kafka-broker-receiver
  namespace: knative-eventing
  labels:
    app: kafka-broker-receiver
spec:
  podSelector:
    matchLabels:
      app: kafka-broker-receiver
  ingress:
    - {}
