scripts/dependencies/serverless/resources/kafka-webhook-eventing-policy.yaml
# https://issues.redhat.com/browse/SRVKE-1216
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: kafka-webhook-eventing
  namespace: knative-eventing
  labels:
    app: kafka-webhook-eventing
spec:
  podSelector:
    matchLabels:
      app: kafka-webhook-eventing
  ingress:
    - {}
